--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,20 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div.small-6.columns
+    div
+      h3
+       a(href='/liz') Lizbert
+    div
+      h3
+       a(href='/beth') Bethbert
+  div.small-6.columns
+    div
+      h3
+       a(href='/jonas') Jonas
+    div
+      h3
+       a(href='/Mom') Mom
+
+      
+    
