--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,11 @@
 doctype html
 html
   head
-    title= title
+    title Merry Christmas
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/foundation/6.0.5/css/foundation.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    div.row.maindiv
+      a(href='/')
+        h1.mid Merry Christmas!
+      block content
