--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,43 @@
+@import url(https://fonts.googleapis.com/css?family=Mountains+of+Christmas);
+@import url(https://fonts.googleapis.com/css?family=Pacifico);
+
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Mountains of Christmas', cursive;
+  background-size: 100% 100%;
+  background-image: url('http://superdevresources.com/wp-content/uploads/sites/7/2014/12/1-high-resolution-christmas-backgrounds.jpg');
 }
 
 a {
   color: #00B7FF;
+}
+
+.maindiv {
+  font-family: 'Mountains of Christmas', cursive;
+  text-align: center;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+h1, h3 {
+  font-family: 'Pacifico', cursive;
+}
+
+li {
+  font-size: 120%;
+  font-weight: bolder;
+  text-align: left;
+}
+
+li div {
+  margin-left: 30px;
+}
+
+.jml {
+  border-radius: 10px;
+  height: 300px;
+  width: 100%;
 }
