--- a/views/lizwins.jade
+++ b/views/lizwins.jade
@@ -2,23 +2,22 @@ extends layout
 
 block content
   div.row
-    div.small-12.columns
+    div.small-4.columns
+      ul
+        li.hinty Wait, really?
+          div.hintly We both know your compy has been more problem than solution recently, so yes, really.
+        li.hinty But I don't know what to buy and will feel bad choosing expensive parts!
+          div.hintly You don't have to choose, this is all solved by giving it a twin.
+    div.small-4.columns
       a(href="http://blog.newegg.com/building-a-gaming-pc-for-the-first-time-dont-panic-this-guide-can-help-you-out/")
         img(src='http://www.netanimations.net/82.gif')
         div Merry Christmas Love!
-  div.row
-    div.small-6.columns
+    div.small-4.columns
       ul
-        li Wait, really?
-          div We both know your compy has been more problem then solution recently, so yes, really.
-        li But I don't know wtf to buy and I feel bad spending your money.
-          div This is all solved by giving it a twin!
-    div.small-6.columns
-      ul
-        li A twin?  Does that mean...
-          div Yes, I am going to build two identical computers, and then make you choose which one you want.
-        li I still have protests and arguments!
-          div My counter argument is Texas.
+        li.hinty A twin?  Does that mean...
+          div.hintly Yes, I am going to build two identical computers, and then make you choose which one you want.
+        li.hinty I still have protests and arguments!
+          div.hintly My counter argument is Texas.
       
       
     
