--- a/views/jonas.jade
+++ b/views/jonas.jade
@@ -5,7 +5,10 @@ block content
     div.small-12.columns
       div What does bacon celebrate on December 25th??
       form(method="post" action="/jonas")
-        input(type='text' name='guess')
+        input(type='text' name='guess' autocomplete='off')
         if error
           div=error
-        button(type='submit') Confirm
+          button.hintly#hint(type='button') GIVE ME A HINT
+          div.hide#showhint= hint
+        p
+          button.button.secondary(type='submit') Submit
