--- a/views/liz.jade
+++ b/views/liz.jade
@@ -5,9 +5,10 @@ block content
     div.small-12.columns
       div What do you call a snowman party?
       form(method="post" action="/liz")
-        input(type='text' name='guess')
+        input(type='text' name='guess' autocomplete='off')
         if error
           div=error
-        button(type='submit') Confirm
-      
-  
+          button.hintly#hint(type='button') GIVE ME A HINT
+          div.hide#showhint= hint
+        p
+          button.button.secondary(type='submit') Submit
