--- a/views/mom.jade
+++ b/views/mom.jade
@@ -5,7 +5,10 @@ block content
     div.small-12.columns
       div What happened during the summer of 2014?
       form(method="post" action="/mom")
-        input(type='text' name='guess')
+        input(type='text' name='guess' autocomplete='off')
         if error
           div=error
-        button(type='submit') Confirm
+          button.hintly#hint(type='button') GIVE ME A HINT
+          div.hide#showhint= hint
+        p
+          button.button.secondary(type='submit') Submit
